src/objects/CAREDataTransfer__c.object
<CustomObject>
    <fields>
        <fullName>AIDM__c</fullName>
        <externalId>true</externalId>
        <label>AIDM</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CARE Data Transfers</relationshipLabel>
        <relationshipName>CAREDataTransfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlternateAreaCode__c</fullName>
        <label>Alternate Area Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlternateExtension__c</fullName>
        <label>Alternate Extension</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlternatePhone__c</fullName>
        <label>Alternate Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnualIncome__c</fullName>
        <label>Annual Income</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationPin__c</fullName>
        <label>Application Pin</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BannerID__c</fullName>
        <label>Banner ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAREStatus__c</fullName>
        <label>CAREStatus</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampusCode__c</fullName>
        <label>Campus Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citizenship__c</fullName>
        <label>Citizenship</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommunityType__c</fullName>
        <label>Community Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EarnedBachelors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Earned Bachelors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmploymentStatus__c</fullName>
        <label>Employment Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnrollmentCounselorPIDM__c</fullName>
        <label>Enrollment Counselor PIDM</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethnic__c</fullName>
        <label>Ethnic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinancialAid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial Aid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GradeScore__c</fullName>
        <label>Grade Score</label>
        <precision>10</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GraduatedHighschool__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Graduated Highschool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ITN__c</fullName>
        <label>ITN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternationalPhone__c</fullName>
        <label>International Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastStageDate__c</fullName>
        <label>Last Stage Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MarriageStatus__c</fullName>
        <label>Marriage Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiddleName__c</fullName>
        <label>Middle Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MilitaryStatus__c</fullName>
        <label>Military Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobileAreaCode__c</fullName>
        <label>Mobile Area Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <label>Mobile Phone</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NativeEnglishSpeaker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Native English Speaker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotesProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notes Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>CARE Data Transfers</relationshipLabel>
        <relationshipName>CAREDataTransfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OtherAreaCode__c</fullName>
        <label>Other Area Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherExtension__c</fullName>
        <label>Other Extension</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherPhone__c</fullName>
        <label>Other Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIDM__c</fullName>
        <externalId>true</externalId>
        <label>PIDM</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParentsAttendedCollege__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parents Attended College</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParentsGraduated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parents Graduated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PostingSource__c</fullName>
        <label>Posting Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefix__c</fullName>
        <label>Prefix</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryAreaCode__c</fullName>
        <label>Primary Area Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryExtension__c</fullName>
        <label>Primary Extension</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryPhone__c</fullName>
        <label>Primary Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramCode__c</fullName>
        <label>Program Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIDM__c</fullName>
        <externalId>true</externalId>
        <label>RIDM</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReceivedDate__c</fullName>
        <label>Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Refid__c</fullName>
        <label>Refid</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponsesProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Responses Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SocialSecurityNumber__c</fullName>
        <label>Social Security Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StopContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stop Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StopEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stop Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TofelScore__c</fullName>
        <label>Tofel Score</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TranscriptEvaluationCompleted__c</fullName>
        <label>Transcript Evaluation Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TranscriptsProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transcripts Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TransitionIssue__c</fullName>
        <label>Transition Issue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WguainfID__c</fullName>
        <externalId>true</externalId>
        <label>Wguainf ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>CARE Data Transfer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>NoReferId</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Refid__c</field>
            <operation>equals</operation>
        </filters>
        <label>NoReferId</label>
    </listViews>
    <nameField>
        <displayFormat>CARE-{0}</displayFormat>
        <label>CARE Upgrade Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CARE Data Transfers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>